recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:16: error: not found: value snowSide
snowSide(levels-1, length/3)
^